--- a/HTML - PERSONAL SITE/contact.html
+++ b/HTML - PERSONAL SITE/contact.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>My Contact Details</h1>
@@ -19,9 +21,6 @@
         <label for="">Your Message: </label><br>
         <textarea name="Message" id="" cols="30" rows="10"></textarea><br>
         <input type="submit" name="" id="">
-        <p>
-            affffffdd
-        </p>
     </form>
 </body>
 </html>
