web-page-complete

--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -14,7 +14,7 @@
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
         <h1>I'm Steven.</h1>
-        <p>a <span class="pro">pro</span>grammer.</p>
+        <h2>a <span class="pro">pro</span>grammer.</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
         <img src="images/mountain.png" alt="mountain-img">
 
@@ -25,27 +25,27 @@
         <div class="profile">
           <img class="pic" src="icons/read.png" alt="">
           <h2>Hello.</h2>
-          <p>I am Web Developer at DXC Technology..</p>
+          <p class="intro">I am Web Developer at DXC Technology.</p>
         </div>
         <hr>
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="pic" src="icons/scientific.png" alt="">
+            <img class="pic-sci" src="icons/scientific.png" alt="">
             <h3>Backend Development</h3>
-            <p>I specialized in building and maintaining the server-side of web applications, ensuring that they are reliable and efficient. I have experience working with a variety of programming languages, including Javascript, PHP, Python, and Java.</p>
+            <p class="backdev-description">I specialized in building and maintaining the server-side of web applications, ensuring that they are reliable and efficient. I have experience working with a variety of programming languages, including Javascript, PHP, Python, and Java.</p>
           </div>
           <div class="skill-row">
-            <img class="pic" src="icons/graphic-tablet.png" alt="">
+            <img class="pic-graph" src="icons/graphic-tablet.png" alt="">
             <h3>Software Development Life Cycle</h3>
-            <p>I am knowlegable in the theories and practices of SDLC</p>
+            <p class="sdlc-description">I am knowlegable in the theories and practices of SDLC. I have experienced working in it during my universirt years.</p>
           </div>
         </div>
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3>If you are interested in working with me.</h3>
-          <p>Hit the contact me below and let's talk how can we solve your problems.</p>
+          <p class="contact-message">Hit the contact me below and let's talk how can we solve your problems.</p>
           <a class="btn" href="mailto:stebo1034@gmail.com">CONTACT ME</a>
         </div>
       </div>
@@ -54,7 +54,7 @@
       <a class="footer-link" href="https://www.linkedin.com/in/steven-andrei-barrios-290617242/">LinkedIn</a>
       <a class="footer-link" href="https://github.com/steven1034">GitHub</a>
       <a class="footer-link" href="https://www.facebook.com/steeeeebo">Facebook</a>
-      <p>© Steven Andrei Barrios 2023.</p>
+      <p class="copyright">© Steven Andrei Barrios @ DXC Technology.</p>
     </div>
 
 
